--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.21.4",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
